# markymark-c

./: .gitignore  CMakeLists.txt  README.md  build-lib.sh  build.sh  clean-xcode.sh  gen-xcode.sh  index.html  run.sh  test.md
.cache/clangd/index/: main.c.1B759CB394ABCAA5.idx  markup.c.C14FCB6E7E02FD96.idx  markup.h.5F70AAE76ACB1670.idx  markymark.c.E23FF929592E1717.idx  markymark.h.80631F9A6EEBB0FF.idx  scanner.c.3B1307896C24E801.idx  scanner.h.A32F9FD2A0991A07.idx  token.h.429CB12B3AE43A99.idx
build-xcode/: CMakeCache.txt  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: markymark
build-xcode/markymark.xcodeproj/: project.pbxproj
build-xcode/markymark.xcodeproj/project.xcworkspace/xcuserdata/matty.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/markymark.xcodeproj/xcshareddata/xcschemes/: markymark.xcscheme
build-xcode/markymark.xcodeproj/xcuserdata/matty.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build-xcode/markymark.xcodeproj/xcuserdata/matty.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: line-processor.h  markup.h  markymark.h  parser.h  scanner.h  token.h
src/: line-processor.c  main.c  markup.c  markymark.c  parser.c  scanner.c
